--- a/Chapter1_Conditionals_Flow_Control.Rmd
+++ b/Chapter1_Conditionals_Flow_Control.Rmd
@@ -2,29 +2,60 @@
 title: "Chapter1_Conditionals_and_Control Flow"
 author: "Emilio Vasquez"
 date: "2022-12-27"
-output: pdf_document
+output:
+  html_document:
+    df_print: paged
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+## Comparing Vectors
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+```{r}
+# The linkedin and facebook vectors have already been created for you
+linkedin <- c(16, 9, 13, 5, 2, 17, 14)
+facebook <- c(17, 7, 5, 16, 8, 13, 14)
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+# Popular days
+linkedin > 15
 
-```{r cars}
-summary(cars)
+# Quiet days
+linkedin <= 5
+
+# LinkedIn more popular than Facebook
+linkedin > facebook
 ```
 
-## Including Plots
+## Comparing Matrices
+```{r}
 
-You can also embed plots, for example:
+# The social data has been created for you
+linkedin <- c(16, 9, 13, 5, 2, 17, 14)
+facebook <- c(17, 7, 5, 16, 8, 13, 14)
+views <- matrix(c(linkedin, facebook), nrow = 2, byrow = TRUE)
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+# When does views equal 13?
+views == 13
+
+
+# When is views less than or equal to 14?
+views <= 14
+
+```
+## & and |
+
+```{r}
+# The linkedin and last variable are already defined for you
+linkedin <- c(16, 9, 13, 5, 2, 17, 14)
+last <- tail(linkedin, 1)
+
+# Is last under 5 or above 10?
+last < 5 | last >10
+
+# Is last between 15 (exclusive) and 20 (inclusive)?
+last >15 & last <=20
+
 ```
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
