--- a/Chapter1_Conditionals_Flow_Control.Rmd
+++ b/Chapter1_Conditionals_Flow_Control.Rmd
@@ -57,5 +57,33 @@ last < 5 | last >10
 # Is last between 15 (exclusive) and 20 (inclusive)?
 last >15 & last <=20
 
+
+# The social data (linkedin, facebook, views) has been created for you
+
+# linkedin exceeds 10 but facebook below 10
+linkedin > 10 & facebook <10
+
+linkedin
+facebook
+
+# When were one or both visited at least 12 times?
+linkedin >= 12 | facebook >=12
+
+# When is views between 11 (exclusive) and 14 (inclusive)?
+
+
+views >11 & views <= 14
+
+
 ```
+```{r}
+x <- 5
+y <- 7
+!(!(x < 4) & !!!(y > 12))
+```
+##Putting it all together
+
+
+
+
 
