--- a/Chapter1_Conditionals_Flow_Control.Rmd
+++ b/Chapter1_Conditionals_Flow_Control.Rmd
@@ -81,9 +81,173 @@ x <- 5
 y <- 7
 !(!(x < 4) & !!!(y > 12))
 ```
-##Putting it all together
+
+
+## The IF statement
+
+In general, we have 
+
+    if (condition) {
+      expr1
+    } else {
+      expr2
+    }
+
+
+Below uses the $<code>$ code.
+<code>
+if (condition) {
+  expr1
+} else {
+  expr2
+}
+</code>
+
+
+Another way with the back-tic:
+```
+if (condition) {
+  expr1
+} else {
+  expr2
+}
+```
+
+
+Below is unformatted:
+if (condition) {
+  expr1
+} else {
+  expr2
+}
+
+```{r}
+# Variables related to your last day of recordings
+medium <- "LinkedIn"
+num_views <- 14
+
+# Examine the if statement for medium
+if (medium == "LinkedIn") {
+  print("Showing LinkedIn information")
+}
+
+# Write the if statement for num_views
+if (num_views > 15){
+  print("You are popular!")
+}
 
 
 
 
+```
 
+
+## Adding an ELSE
+
+```{r}
+
+# Let's add in an else:
+
+# Control structure for medium
+if (medium == "LinkedIn") {
+  print("Showing LinkedIn information")
+} else{
+  print("Unknown medium")
+}
+
+
+
+# Control structure for num_views
+if (num_views > 15) {
+  print("You're popular!")
+} else {
+  print("Try to be more visible!")
+}
+
+```
+
+## Adding ELSE IF 
+
+```
+if (condition1) {
+  expr1
+} else if (condition2) {
+  expr2
+} else if (condition3) {
+  expr3
+} else {
+  expr4
+}
+```
+
+```{r}
+
+# Variables related to your last day of recordings
+medium <- "LinkedIn"
+num_views <- 14
+
+# Control structure for medium
+if (medium == "LinkedIn") {
+  print("Showing LinkedIn information")
+} else if (medium == "Facebook") {
+  print("Showing Facebook information")
+} else {
+  print("Unknown medium")
+}
+
+# Control structure for num_views
+if (num_views > 15) {
+  print("You're popular!")
+} else if (num_views <= 15 & num_views > 10) {
+  print("Your number of views is average")
+
+
+} else {
+  print("Try to be more visible!")
+}
+
+```
+
+
+
+
+```{r}
+number <- 6
+if (number < 10) {
+  if (number < 5) {
+    result <- "extra small"
+  } else {
+    result <- "small"
+  }
+} else if (number < 100) {
+  result <- "medium"
+} else {
+  result <- "large"
+}
+print(result)
+```
+
+
+## Putting it all together
+
+```{r}
+
+# Variables related to your last day of recordings
+li <- 15
+fb <- 9
+
+# Code the control-flow construct
+if (li > 15 & fb > 15) {
+  sms <- 2 * (li + fb)
+} else if (li <10 & fb < 10) {
+  sms <- 0.5 * (li + fb)
+} else {
+  sms <- li + fb
+}
+
+# Print the resulting sms to the console
+
+print(sms)
+
+
+```
